Edited an info file

--- a/Info.html
+++ b/Info.html
@@ -43,7 +43,7 @@
 <p style="color:#DB7093;">
 Hotline Miami is a 2D top-down action video game by Jonatan Söderström and Dennis Wedin, collectively known as Dennaton Games. The game was published by Devolver Digital and released on October 23, 2012 for Microsoft Windows.
 The game blends top down perspective with stealth, extreme violence and surreal storytelling, along with a soundtrack and visuals influenced by 1980s culture. The game itself was influenced in part by Nicolas Winding Refn's 
-2011 neo-noir crime drama film Drive, as well as Cocaine Cowboys;[2] Refn is specifically thanked in the game's credits, and the game even features a similar "Driver" jacket lying on the floor in several levels
+2011 neo-noir crime drama film Drive, as well as Cocaine Cowboys=))
 </p>
 
 
